# boss-career-ops

./: .gitignore  AGENT_DEV_PROMPT.md  CLAUDE.md  LICENSE  README.md  REFACTOR_AGENT_AI.md  REFACTOR_PROMPT.md  parse_pipeline.py  pyproject.toml  search30.py  search_results.json  start.bat
.trae/rules/: rules.md
.trae/specs/implement-boss-career-ops/: checklist.md  spec.md  tasks.md
docs/: optimization_plan.md
extension/: background.js  manifest.json  popup.html
output/: agent_dev_shenzhen.json  search_agent_shenzhen.json  view_detail.py  view_search.py
skills/boss-career-ops/: skill.md
src/boss_career_ops/: __init__.py  errors.py  schema.py
src/boss_career_ops/agent/: conditions.py  graph.py  llm.py  prompts.py  state.py  tools.py
src/boss_career_ops/agent/nodes/: apply.py  evaluate.py  gap_analysis.py  orchestrator.py  resume.py
src/boss_career_ops/ai/: __init__.py  config.py  provider.py
src/boss_career_ops/boss/: __init__.py  browser_client.py  search_filters.py
src/boss_career_ops/boss/api/: __init__.py  boss.yaml  client.py  endpoints.py
src/boss_career_ops/boss/auth/: __init__.py  manager.py  token_store.py
src/boss_career_ops/bridge/: __init__.py  client.py  daemon.py  protocol.py
src/boss_career_ops/cache/: __init__.py  store.py
src/boss_career_ops/cli/: main.py
src/boss_career_ops/commands/: __init__.py  agent_cmd.py  agent_evaluate.py  agent_save.py  ai_config.py  ai_evaluate.py  ai_evaluate_batch.py  apply.py  auto_action.py  bridge.py  chat.py  chatmsg.py  dashboard.py  digest.py  doctor.py  evaluate.py  exchange.py  export.py  follow_up.py  greet.py  interview.py  login.py  mark.py  mcp_server.py  negotiate.py  pipeline.py  rag.py  recommend.py  resume.py  search.py  setup.py  shortlist.py  skill_update.py  status.py  watch.py  web.py
src/boss_career_ops/config/: __init__.py  ai_config.py  settings.py  singleton.py  thresholds.py
src/boss_career_ops/dashboard/: __init__.py  app.py
src/boss_career_ops/dashboard/screens/: __init__.py  analytics_screen.py  detail_screen.py  pipeline_screen.py
src/boss_career_ops/data/: llm_providers.yml  profile.example.yml  skill_synonyms.yml  thresholds.example.yml
src/boss_career_ops/display/: __init__.py  error_codes.py  logger.py  output.py
src/boss_career_ops/evaluator/: __init__.py  ai_scorer.py  dimensions.py  engine.py  report.py  scorer.py  utils.py
src/boss_career_ops/hooks/: __init__.py  manager.py
src/boss_career_ops/mcp/: resources.py  server.py  tools.py
src/boss_career_ops/pipeline/: __init__.py  auto_action.py  manager.py  stages.py
src/boss_career_ops/platform/: __init__.py  adapter.py  field_mapper.py  models.py  registry.py
src/boss_career_ops/platform/adapters/boss/: __init__.py  adapter.py
src/boss_career_ops/rag/: chunker.py  embedder.py  indexer.py  retriever.py  schemas.py  vector_store.py
src/boss_career_ops/resume/: __init__.py  generator.py  keywords.py  pdf_engine.py  upload.py
src/boss_career_ops/resume/templates/: default.html
src/boss_career_ops/web/: server.py
src/boss_career_ops/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_adapter_chain.py  test_agent_apply.py  test_agent_cmd.py  test_agent_evaluate.py  test_agent_gap_analysis.py  test_agent_graph.py  test_agent_llm.py  test_agent_nodes.py  test_agent_orchestrator.py  test_agent_prompts.py  test_agent_resume_node.py  test_agent_search.py  test_agent_state.py  test_agent_tools.py  test_ai_config.py  test_ai_evaluate.py  test_ai_results.py  test_ai_scorer.py  test_apply.py  test_auth_manager.py  test_boss_endpoints.py  test_boss_search_filters.py  test_boss_token_store.py  test_bridge_client.py  test_bridge_daemon.py  test_bridge_protocol.py  test_bridge_visibility.py  test_browser_client.py  test_cache.py  test_channel_architecture.py  test_cli.py  test_client_improvements.py  test_commands.py  test_config.py  test_cookie_consistency.py  test_dashboard_import.py  test_display.py  test_endpoint_verify.py  test_errors.py  (+33 more)
tests/evaluator/: test_scorer.py
tests/pipeline/: test_stages.py
tests/platform/: test_field_mapper.py  test_models.py
