[project]
name = "boss-career-ops"
version = "0.4.1"
description = "BOSS直聘 AI 求职全流程系统 — 搜索、评估、投递、沟通、面试、谈判闭环"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "boss-career-ops contributors" },
]
keywords = ["boss", "zhipin", "job-search", "career", "recruitment", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "patchright>=1.0",
    "playwright>=1.40",
    "textual>=0.50",
    "rich>=13.0",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "aiohttp>=3.9",
    "portalocker>=3.2.0",
    "markdown>=3.10.2",
    "psutil>=7.2.2",
]

[project.scripts]
bco = "boss_career_ops.cli.main:cli"

[project.urls]
Repository = "https://github.com/maimaigptlink9/boss-career-ops"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests/**", ".trae/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/boss_career_ops"]

[tool.hatch.build.targets.wheel.force-include]
"src/boss_career_ops/boss/api/boss.yaml" = "boss_career_ops/boss/api/boss.yaml"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "build>=1.4.3",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
