[project]
name = "boss-career-ops"
version = "0.6.0"
description = "BOSS直聘 AI 求职全流程系统 — 搜索、评估、投递、沟通、面试、谈判闭环"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "boss-career-ops contributors" },
]
keywords = ["boss", "zhipin", "job-search", "career", "recruitment", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1,<9.0",
    "httpx>=0.27,<0.28",
    "patchright>=1.0,<2.0",
    "textual>=0.50,<1.0",
    "rich>=13.0,<14.0",
    "pyyaml>=6.0,<7.0",
    "cryptography>=44.0,<47.0",
    "aiohttp>=3.9,<4.0",
    "portalocker>=3.2.0,<4.0",
    "markdown>=3.10.2,<4.0",
    "psutil>=7.2.2,<8.0",
    "langchain>=0.3,<0.4",
    "langgraph>=0.2,<0.3",
    "langchain-openai>=0.2,<0.3",
    "chromadb>=0.5,<0.6",
    "mcp>=1.0,<2.0",
]

[project.optional-dependencies]
web = ["fastapi>=0.115,<1.0", "uvicorn>=0.34,<1.0"]

[project.scripts]
bco = "boss_career_ops.cli.main:cli"

[project.urls]
Repository = "https://github.com/maimaigptlink9/boss-career-ops"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["tests/**", ".trae/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/boss_career_ops"]

[tool.hatch.build.targets.wheel.force-include]
"src/boss_career_ops/boss/api/boss.yaml" = "boss_career_ops/boss/api/boss.yaml"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "build>=1.4.3",
    "twine>=6.2.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --timeout=60 --timeout-method=thread"
